css z-index bug

--- a/src/client/app/app.component.css
+++ b/src/client/app/app.component.css
@@ -2,8 +2,15 @@
     width: 250px;
 }
 
+#wrapper {
+    position: relative;
+}
+
 .page-content {
-    display: inline-block;
+    position: absolute;
+    background-color: red;
+    left: 50px;
+    z-index: 1;
 }
 
 :host {
