--- a/src/client/app/shared/ui-elements/sidenav/sidenav.component.css
+++ b/src/client/app/shared/ui-elements/sidenav/sidenav.component.css
@@ -1,6 +1,9 @@
 .left {
     float:left;
     height:100vh;
+    position: absolute;
+    top: 0px;
+    z-index: 2;
 }
 
 .left {
